Change naming of packages and project

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.streamagents</groupId>
-    <artifactId>streamagents-core</artifactId>
+    <groupId>com.fmas</groupId>
+    <artifactId>fmas-core</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
     <properties>
